# dwimmy

./: README.md  pyproject.toml
dwimmy/: __init__.py  argparse.py  cli.py  click.py  typer.py
dwimmy/core/: __init__.py  matcher.py  utils.py
tests/: test_argparse.py  test_argparse_dwim.py  test_cli_generate.py  test_cli_init.py  test_click_extraction.py  test_dependencies.py  test_generate_command.py  test_onnx_runtime.py
